--- a/Server/package.json
+++ b/Server/package.json
@@ -2,9 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Video calling app",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "author": "sumit",
   "license": "ISC",
